# risk-atlas-nexus-demos

./: README.md
capabilities/: README.md  app.py  requirements.txt
gaf-guard/: MANIFEST.in  README.md  pyproject.toml
gaf-guard/examples/data/: benchmark_customer_complaints.json  prompts.json  prompts_profanity.json
gaf-guard/examples/notebooks/: show_agent_workflow.ipynb
gaf-guard/examples/server_configs/: risk_assessment.yaml
gaf-guard/examples/trials/: Trial_2026-02-16_00:42:40.json
gaf-guard/src/gaf_guard/: __init__.py  config.py  redirect.py  serve.py
gaf-guard/src/gaf_guard/chain_of_thought/: drift_monitoring.json
gaf-guard/src/gaf_guard/clients/: benchmark.py  cli.py  langgraph.json  langgraph.py  streamlit.py
gaf-guard/src/gaf_guard/clients/stream_adaptors/: __init__.py  base.py  json_adapter.py
gaf-guard/src/gaf_guard/core/: __init__.py  agent_builder.py  decorators.py  models.py
gaf-guard/src/gaf_guard/core/agents/: __init__.py  benchmark.py  dynamic_risk_assessment.py  guardrails.py  human_in_the_loop.py  orchestrator.py  risk_assessment.py  risk_generation.py  stream.py  trial_logger.py
gaf-guard/src/gaf_guard/toolkit/: enums.py
neo4j-db/examples/: ai-risk-ontology.cypher
ran-viz/: README.md
ran-viz/front-end/: README.md
ran-viz/front-end/demo/: index.html  package-lock.json  package.json  tsconfig.json
ran-viz/front-end/demo/public/: ai-risk-ontology.json
ran-viz/front-end/demo/src/: index.tsx  styles.scss  types.ts
ran-viz/front-end/demo/src/views/: ClustersPanel.tsx  DescriptionPanel.tsx  GraphEventsController.tsx  GraphTitle.tsx  Root.tsx
ran-viz/python/: app.py  requirements.txt
ran-viz/python/util/: export_json_graph.py  json_graph_dumper.py
risk-policy-distillation/: .env.example  .gitignore  README.md  pyproject.toml
risk-policy-distillation/examples/notebooks/: README.md  full_explanation_pipeline.ipynb
risk-policy-distillation/src/risk_policy_distillation/fm_factual/: llm_handler.py  nli_extractor.py
risk-policy-distillation/src/risk_policy_distillation/pipeline/: clusterer.py
(+1 files in other folders)
